Fix spacing in `@docs` blocks; don't expand `details` admonition by default (#2847)
* Fix spacing in `@docs` blocks

* Don't expand  admonition by default

--- a/assets/html/scss/documenter/components/_docstring.scss
+++ b/assets/html/scss/documenter/components/_docstring.scss
@@ -53,10 +53,6 @@ details.docstring {
       border-bottom: none;
     }
 
-    > p {
-      margin: 0 !important;
-    }
-
     > a.docs-sourcelink {
       transition: opacity 0.3s;
       opacity: 0;
